# sofa-web

./: .env-ai18n.samples  .eslintrc.js  .gitignore  .npmrc  .stylelintrc.js  CLAUDE.md  README.md  index.d.ts  lang-extractor.mjs  nx.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  tsconfig.node.json
apps/dapp/: .env.demo  .env.prod  README.md  index.html  multi-page.ts  package.json  postcss.config.js  tsconfig.json  vite.config.ts
apps/dapp/public/: ban.html  error.html  sitemap-dapp.xml  sitemap-www.xml
apps/dapp/renderer/: _default.page.client.ts  _default.page.server.ts
apps/dapp/src/: env-links.ts  global-var.ts  index.scss  main.tsx  route-guard.tsx  routes.tsx  seo-config.ts  store.ts  vite-env.d.ts
libs/alg/: Cargo.toml  LICENSE_MIT  README.md  package.json
libs/alg/src/: lib.rs
libs/alg/src/modules/: apy.rs  mod.rs
libs/effects/: package.json  utils.ts
libs/effects/AutoBg/: index.scss  index.tsx  starry.ts
libs/effects/BottomCloud/: index.scss  index.tsx
libs/effects/SFXText/: index.tsx  (+1 more)
libs/services/: auth.ts  automator-creator.ts  automator-user.ts  automator.ts  base-type.ts  blacklist.ts  campaign.ts  ccy.ts  chains.ts  contracts.ts  dual.ts  i18n.ts  market.ts  package.json  points.ts  positions.ts  products-diy.ts  products.ts  rch.ts  referral.ts  the-graph.ts  wallet-connect.ts  wallet.ts
libs/utils/: amount.ts  decorators.ts  env.ts  expiry.ts  fns.ts  history.ts  hooks.ts  http.ts  logger.ts  object.ts  package.json  sentry.ts  storage.ts  string.tsx  time.ts  url.ts  version.ts  vite.config.ts  zustand.ts
(+518 files in other folders)
